# daily-desktop-background-rust

./: Cargo.toml  README.md
src/: main.rs
