[package]
name = "daily-desktop-background-rust"
version = "1.0.0"
authors = ["Linus <linus.eckhard@googlemail.com>"]
description = "Sets the desktop background to a random photo from Unsplash"
repository = "https://github.com/LinusPhoenix/daily-desktop-background-rust/"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.6", features = ["blocking"] }